--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,10 @@
   margin: 0;
   padding: 0;
 }
+
+html, body, #__next {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  height: 100%;
+  width: 100%;;
+}
